tests/rosetta/out/cpp/15-puzzle-solver.cpp
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <iostream>

namespace testpkg {
inline int Add(int a, int b) { return a + b; }
const double Pi = 3.14;
const int Answer = 42;
} // namespace testpkg
int main() {
  std::cout << testpkg::FifteenPuzzleExample() << std::endl;
  return 0;
}
